mongo-c-driver 1.8.0
====================

  * Added this
  * Removed that

Thanks to everyone who contributed to the development of this release.

  * A name
  * Another name


mongo-c-driver 1.7.0
====================

  * CMake build now installs .pc files for programs that link to libmongoc using
    pkg-config. Both the CMake and Autotools build systems now install .cmake
    files for programs that link to libmongoc using CMake. Linking to libmongoc
    statically or dynamically is now much more convenient. See the new tutorial
    section "Include and link libmongoc in your C program".
  * New CMake option ENABLE_STATIC can be ON, OFF, or AUTO (the default)
  * Minimum required CMake version has been increased to 3.1.
  * CMake remains experimental on non-Windows platforms and issues a warning now
  * Support for wire compression.
    * Support for snappy and zlib. MongoDB 3.4 only supports snappy, while zlib
      support is expected in MongoDB 3.6.
      The enable, configure mongoc like so:
      ./configure --with-snappy --with-zlib
    * New functions: mongoc_uri_get_compressors & mongoc_uri_set_compressors, to
      get and set compressor configuration on mongoc_uri_t
    * Added support for comma seperated "compressors" connection string option (e.g.
      mongodb://localhost/?compressors=snappy,zlib)
    * Added support for configuring zlib compression level in the connection string
      (e.g. mongodb://localhost/?compressors=zlib&zlibcompressionlevel=8)
  * Now requires the use of CMake config files for libbson to build libmongoc
    with CMake
  * Added pkg-config support for libressl.
  * New function mongoc_uri_set_auth_mechanism to update the authentication
    mechanism of a mongoc_uri_t after it is created from a string.
  * New function mongoc_bulk_operation_insert_with_opts provides immediate
    error checking.
  * New function mongoc_uri_new_with_error provides a way to parse a connection