@@ -741,7 +741,7 @@ bool
 mongoc_collection_read_write_command_with_opts (
    mongoc_collection_t *collection,
    const bson_t *command,
-   const mongoc_read_prefs_t *read_prefs,
+   const mongoc_read_prefs_t *read_prefs /* IGNORED */,
    const bson_t *opts,
    bson_t *reply,
    bson_error_t *error)
