@@ -259,7 +259,7 @@ bool
 mongoc_database_read_write_command_with_opts (
    mongoc_database_t *database,
    const bson_t *command,
-   const mongoc_read_prefs_t *read_prefs,
+   const mongoc_read_prefs_t *read_prefs /* IGNORED */,
    const bson_t *opts,
    bson_t *reply,
    bson_error_t *error)
