@@ -377,6 +377,30 @@ background_mongoc_collection_insert (void *data)
 }
 
 static void *
+background_mongoc_collection_read_write_command_with_opts (void *data)
+{
+   future_t *future = (future_t *) data;
+   future_value_t return_value;
+
+   return_value.type = future_value_bool_type;
+
+   future_value_set_bool (
+      &return_value,
+      mongoc_collection_read_write_command_with_opts (
+         future_value_get_mongoc_collection_ptr (future_get_param (future, 0)),
+         future_value_get_const_bson_ptr (future_get_param (future, 1)),
+         future_value_get_const_mongoc_read_prefs_ptr (future_get_param (future, 2)),
+         future_value_get_const_bson_ptr (future_get_param (future, 3)),
+         future_value_get_bson_ptr (future_get_param (future, 4)),
+         future_value_get_bson_error_ptr (future_get_param (future, 5))
+      ));
+
+   future_resolve (future, return_value);
+
+   return NULL;
+}
+
+static void *
 background_mongoc_collection_insert_bulk (void *data)
 {
    future_t *future = (future_t *) data;
@@ -1175,6 +1199,40 @@ future_collection_insert (
       future_get_param (future, 4), error);
    
    future_start (future, background_mongoc_collection_insert);
+   return future;
+}
+
+future_t *
+future_collection_read_write_command_with_opts (
+   mongoc_collection_ptr collection,
+   const_bson_ptr command,
+   const_mongoc_read_prefs_ptr read_prefs,
+   const_bson_ptr opts,
+   bson_ptr reply,
+   bson_error_ptr error)
+{
+   future_t *future = future_new (future_value_bool_type,
+                                  6);
+   
+   future_value_set_mongoc_collection_ptr (
+      future_get_param (future, 0), collection);
+   
+   future_value_set_const_bson_ptr (
+      future_get_param (future, 1), command);
+   
+   future_value_set_const_mongoc_read_prefs_ptr (
+      future_get_param (future, 2), read_prefs);
+   
+   future_value_set_const_bson_ptr (
+      future_get_param (future, 3), opts);
+   
+   future_value_set_bson_ptr (
+      future_get_param (future, 4), reply);
+   
+   future_value_set_bson_error_ptr (
+      future_get_param (future, 5), error);
+   
+   future_start (future, background_mongoc_collection_read_write_command_with_opts);
    return future;
 }
 
